--- a/firebase.json
+++ b/firebase.json
@@ -70,8 +70,6 @@
       "**/node_modules/**",
       "functions/**",
       "kuas-reception/**",
-      "dataconnect/**",
-      "dataconnect-generated/**",
       "register_of_names/**"
     ],
     "headers": [
@@ -85,6 +83,18 @@
         "source": "**/*.@(png|jpg|jpeg|gif|webp|svg|ico)",
         "headers": [
           { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+        ]
+      },
+      {
+        "source": "firebase-init.js",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-cache" }
+        ]
+      },
+      {
+        "source": "firebase-config.js",
+        "headers": [
+          { "key": "Cache-Control", "value": "no-cache" }
         ]
       },
       {
