--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "deepl-node": "^1.14.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "langchain": "^0.3.6",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
