--- a/apps/reception-web/package.json
+++ b/apps/reception-web/package.json
@@ -7,19 +7,23 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && npx firebase deploy --only hosting:reception-web --config ../../firebase.json"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.2",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
-    "lucide-react": "^0.545.0",
+  "i18next-browser-languagedetector": "^8.0.2",
+  "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-i18next": "^15.1.4",
     "react-router-dom": "^6.30.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "i18next": "^24.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
