--- a/functions/package.json
+++ b/functions/package.json
@@ -13,11 +13,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "deepl-node": "^1.14.0",
+    "express": "^5.2.1",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "langchain": "^0.3.6",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
