--- a/apps/reception-web/package.json
+++ b/apps/reception-web/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "typecheck": "tsc -b",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && npx firebase deploy --only hosting:reception-web --config ../../firebase.json"
@@ -15,8 +16,8 @@
     "@tanstack/react-query": "^5.90.2",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
-  "i18next-browser-languagedetector": "^8.0.2",
-  "lucide-react": "^0.545.0",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
