--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
+  "name": "kuas-reception",
+  "version": "1.0.0",
+  "private": true,
+  "description": "KUAS Engineering Faculty Open Campus Reception System",
   "scripts": {
-    "test": "echo \"No tests defined\" && exit 0",
-    "build:reception-web": "npm run build --prefix apps/reception-web",
-    "deploy:reception-web": "npm run build:reception-web && npx firebase deploy --only hosting:reception-web"
+    "dev": "npm run dev --prefix apps/reception-web",
+    "build": "npm run build --prefix apps/reception-web",
+    "preview": "npm run preview --prefix apps/reception-web",
+    "lint": "npm run lint --prefix apps/reception-web",
+    "typecheck": "npm run typecheck --prefix apps/reception-web",
+    "deploy": "npm run build && firebase deploy --only hosting:reception-web",
+    "deploy:functions": "firebase deploy --only functions",
+    "deploy:all": "npm run build && firebase deploy",
+    "emulators": "firebase emulators:start",
+    "test": "echo \"No tests defined\" && exit 0"
   },
   "dependencies": {
     "deepl-node": "^1.20.0"
   },
   "devDependencies": {
     "firebase-tools": "^13.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
