--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -58,6 +58,6 @@ jobs:
         run: |
           npx firebase-tools deploy \
             --project ${{ secrets.FIREBASE_PROJECT_ID }} \
-            --only hosting,functions,firestore:rules \
+            --only hosting,functions \
             --non-interactive \
             --force
